[package]
name = "rust_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.60"
serde = { version = "1.0.148", features = ["derive"] }
sycamore = { version = "0.8.2", features = ["serde", "futures"] }
tracing = "0.1.37"
tracing-wasm = "0.2.1"

[dependencies.web-sys]
version = "0.3.60"
features = [
  "Window",
  "VideoTrack",
  "HtmlVideoElement",
  "HtmlSelectElement",
  "Navigator",
  "MediaStream",
  "MediaDeviceInfo",
  "MediaDeviceKind",
  "MediaStreamConstraints",
  "Permissions",
  "MediaDevices"
]